# Washizukami-Collector

./: .gitignore  Cargo.toml  README-Japanese.md  README.md  build.rs  config.yaml
.cargo/: config.toml.example
.github/workflows/: release.yml
artifacts/: windows_eventlogs.yaml  windows_filesystem.yaml  windows_ntfs.yaml  windows_registry.yaml  windows_srum.yaml  windows_web.yaml  windows_wmi.yaml
src/: collector.rs  config.rs  exttools.rs  logger.rs  main.rs  ntfs_reader.rs  path_resolver.rs  privileges.rs  scan.rs  ui.rs
