[package]
name = "washizukami"
version = "0.4.2"
edition = "2024"
description = "Washizukami (鷲掴) — fast forensic artifact collector for Windows"

[[bin]]
name = "washi"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
glob = "0.3"
ntfs = "0.4"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
colored = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
opt-level     = 3
lto           = "fat"       # whole-program link-time optimisation
codegen-units = 1           # single CGU → best inlining, smallest binary
strip         = "symbols"   # strip debug symbols from the final EXE
# panic = "abort" は ntfs クレートの proc-macro (strum_macros) と干渉するため除外

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Registry",
    "Win32_System_Environment",
] }
